--- a/index.html
+++ b/index.html
@@ -1,314 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      body {
-        background-color: black;
-        margin: 0;
-        overflow: hidden;
-      }
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Le jeu Juste Prix est un jeu amusant et excitant où vous devez deviner le prix exact d'un produit donné. Testez vos compétences en matière d'estimation et de négociation tout en vous amusant avec ce jeu classique de télévision. Jouez maintenant et voyez si vous pouvez deviner le juste prix !" >
+    <title>Juste Prix</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="home-page">
+        <h1>Le Jeu du Juste Prix</h1>
+        <div class="content">
+            <div class="rules">
+                <h2>Règles</h2>
+                <ul>
+                    <li>Devinez le prix de l'objet affiché à l'aide de l'élément de formulaire de saisie de nombre.</li>
+                    <li>Si le prix deviné est égal au prix réel de l'objet, vous gagnez et un message de félicitations s'affiche.</li>
+                    <li>Si le prix deviné est supérieur au prix réel de l'objet, vous perdez et un message indique que vous avez deviné un prix trop élevé.</li>
+                </ul>
+            </div>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button-home">Jouer</a>
+        </div>
+        
 
-      #spaceship {
-        width: 50px;
-        height: 50px;
-        background-color: blue;
-        position: absolute;
-        bottom: 0;
-      }
-
-      .enemy {
-        width: 50px;
-        height: 50px;
-        background-color: red;
-        position: absolute;
-        top: 0;
-      }
-
-      .big-enemy {
-        width: 100px;
-        height: 100px;
-        background-color: orange;
-        position: absolute;
-        top: 0;
-      }
-
-      .laser {
-        width: 5px;
-        height: 20px;
-        background-color: yellow;
-        position: absolute;
-      }
-
-      .big-enemy-laser {
-        width: 5px;
-        height: 20px;
-        background-color: orange;
-        position: absolute;
-      }
-
-      #score {
-        color: white;
-        font-size: 24px;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-      }
-
-      #timer {
-        color: white;
-        font-size: 24px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-      }
-
-      #boss-life {
-        display: none; /* Caché initialement */
-        color: white;
-        font-size: 24px;
-        position: absolute;
-        top: 50px;
-        left: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="spaceship"></div>
-    <div class="enemy" id="enemy1"></div>
-    <div class="enemy" id="enemy2"></div>
-    <div class="enemy" id="enemy3"></div>
-    <div id="score">Score: 0</div>
-    <div id="timer">Time: 0s</div>
-    <div id="boss-life">Boss Life: 100%</div>
-
-    <script>
-      const spaceship = document.getElementById('spaceship');
-      const spaceshipWidth = spaceship.clientWidth;
-      const screenWidth = window.innerWidth;
-      let score = 0;
-      let time = 0;
-      let bossLife = 100; // Vie initiale du boss (100%)
-      let timerInterval;
-      const bossLifeElement = document.getElementById('boss-life');
-
-      let spaceshipX = screenWidth / 2 - spaceshipWidth / 2;
-      let isMovingLeft = false;
-      let isMovingRight = false;
-
-      const enemy1 = document.getElementById('enemy1');
-      const enemy2 = document.getElementById('enemy2');
-      const enemy3 = document.getElementById('enemy3');
-
-      const enemies = [enemy1, enemy2, enemy3];
-      const enemySpeed = 1.5;
-      const laserSpeed = 5;
-      const bigEnemyLaserSpeed = 2; // Réduction de 25% de la vitesse
-
-      let bigEnemyShootCooldown = 0;
-
-      function moveEnemies() {
-        enemies.forEach((enemy) => {
-          let currentTop = parseInt(enemy.style.top, 10) || 0;
-          enemy.style.top = currentTop + enemySpeed + 'px';
-
-          if (currentTop >= window.innerHeight) {
-            enemy.style.top = '0px';
-            enemy.style.left = Math.random() * (window.innerWidth - 50) + 'px';
-          }
-        });
-
-        requestAnimationFrame(moveEnemies);
-      }
-
-      function updateSpaceshipPosition() {
-        if (isMovingLeft) {
-          spaceshipX -= 5;
-        }
-        if (isMovingRight) {
-          spaceshipX += 5;
-        }
-
-        spaceshipX = Math.max(0, spaceshipX);
-        spaceshipX = Math.min(screenWidth - spaceshipWidth, spaceshipX);
-
-        spaceship.style.left = spaceshipX + 'px';
-
-        requestAnimationFrame(updateSpaceshipPosition);
-      }
-
-      function createLaser(x, y) {
-        const laser = document.createElement('div');
-        laser.className = 'laser';
-        laser.style.left = x + 'px';
-        laser.style.top = y + 'px';
-        document.body.appendChild(laser);
-
-        function moveLaser() {
-          let currentTop = parseInt(laser.style.top, 10) || 0;
-          laser.style.top = currentTop - laserSpeed + 'px';
-
-          if (currentTop <= -20) {
-            document.body.removeChild(laser);
-          } else {
-            enemies.forEach((enemy, enemyIndex) => {
-              if (isColliding(laser, enemy)) {
-                document.body.removeChild(laser);
-                document.body.removeChild(enemy);
-                score += 1;
-                updateScore();
-
-                if (score < 20) {
-                  setTimeout(spawnNewEnemy, 1000, enemyIndex);
-                } else if (score === 20) {
-                  spawnBigEnemy();
-                }
-              }
-            });
-
-            const bigEnemy = document.querySelector('.big-enemy');
-            if (bigEnemy && isColliding(laser, bigEnemy)) {
-              document.body.removeChild(laser);
-              bossLife -= 10; // Réduit la vie du boss de 10%
-              updateBossLife();
-
-              if (bossLife <= 0) { // Vérifie si la vie du boss est épuisée
-                alert('Congratulations! You Win! Your Score: ' + score);
-                location.reload();
-              }
-            }
-
-            requestAnimationFrame(moveLaser);
-          }
-        }
-
-        requestAnimationFrame(moveLaser);
-      }
-
-      function isColliding(element1, element2) {
-        const rect1 = element1.getBoundingClientRect();
-        const rect2 = element2.getBoundingClientRect();
-        return (
-          rect1.top < rect2.bottom &&
-          rect1.right > rect2.left &&
-          rect1.bottom > rect2.top &&
-          rect1.left < rect2.right
-        );
-      }
-
-      function spawnNewEnemy(index) {
-        if (score < 20) {
-          const newEnemy = document.createElement('div');
-          newEnemy.className = 'enemy';
-          newEnemy.style.left = Math.random() * (window.innerWidth - 50) + 'px';
-          newEnemy.style.top = '0px';
-          document.body.appendChild(newEnemy);
-          enemies[index] = newEnemy;
-        }
-      }
-
-      function spawnBigEnemy() {
-        if (score === 20) {
-          bossLife = 100; // Réinitialise la vie du boss
-          bossLifeElement.style.display = 'block'; // Affiche le compteur de la vie du boss
-
-          const bigEnemy = document.createElement('div');
-          bigEnemy.className = 'big-enemy';
-          bigEnemy.style.left = Math.random() * (window.innerWidth - 100) + 'px';
-          bigEnemy.style.top = '0px';
-          document.body.appendChild(bigEnemy);
-
-          let bigEnemyX = parseFloat(bigEnemy.style.left);
-          let direction = 1;
-
-          function moveBigEnemy() {
-            bigEnemyX += direction * enemySpeed;
-            bigEnemy.style.left = bigEnemyX + 'px';
-
-            if (bigEnemyX <= 0 || bigEnemyX + 100 >= screenWidth) {
-              direction *= -1;
-            }
-
-            if (bigEnemyShootCooldown <= 0) {
-              createBigEnemyLaser(bigEnemyX + 50, 100);
-              bigEnemyShootCooldown = 100;
-            } else {
-              bigEnemyShootCooldown--;
-            }
-
-            requestAnimationFrame(moveBigEnemy);
-          }
-
-          requestAnimationFrame(moveBigEnemy);
-        }
-      }
-
-      function createBigEnemyLaser(x, y) {
-        const laser = document.createElement('div');
-        laser.className = 'big-enemy-laser';
-        laser.style.left = x + 'px';
-        laser.style.top = y + 'px';
-        document.body.appendChild(laser);
-
-        function moveLaser() {
-          let currentTop = parseInt(laser.style.top, 10) || 0;
-          laser.style.top = currentTop + bigEnemyLaserSpeed + 'px';
-
-          if (currentTop >= window.innerHeight) {
-            document.body.removeChild(laser);
-          }
-
-          if (isColliding(laser, spaceship)) {
-            alert('Game Over! Your Score: ' + score);
-            location.reload();
-          }
-
-          requestAnimationFrame(moveLaser);
-        }
-
-        requestAnimationFrame(moveLaser);
-      }
-
-      function updateScore() {
-        const scoreElement = document.getElementById('score');
-        scoreElement.textContent = 'Score: ' + score;
-      }
-
-      function updateBossLife() {
-        bossLifeElement.textContent = 'Boss Life: ' + bossLife + '%';
-      }
-
-      function updateTimer() {
-        const timerElement = document.getElementById('timer');
-        timerElement.textContent = 'Time: ' + time + 's';
-        time++;
-      }
-
-      timerInterval = setInterval(updateTimer, 1000);
-
-      window.addEventListener('keydown', (event) => {
-        if (event.key === 'ArrowLeft') {
-          isMovingLeft = true;
-        }
-        if (event.key === 'ArrowRight') {
-          isMovingRight = true;
-        }
-        if (event.key === ' ') {
-          createLaser(spaceshipX + spaceshipWidth / 2, window.innerHeight - 50);
-        }
-      });
-
-      window.addEventListener('keyup', (event) => {
-        if (event.key === 'ArrowLeft') {
-          isMovingLeft = false;
-        }
-        if (event.key === 'ArrowRight') {
-          isMovingRight = false;
-        }
-      });
-
-      moveEnemies();
-      updateSpaceshipPosition();
-      updateScore();
-    </script>
-  </body>
+    </section>
+</body>
 </html>
